--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.3",
     "react": "^18.1.0",
+    "react-datepicker": "^6.6.0",
     "react-dom": "^18.1.0",
     "react-icons": "^5.0.1",
     "react-loader-spinner": "^6.1.1-0",
-    "react-router-dom": "^6.21.0",
     "react-redux": "^9.0.4",
+    "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
     "web-vitals": "^2.1.3"
